--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -39,9 +39,10 @@
 
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+        
+        To begin the development, run `npm start` or `yarn start`.
+        To create a production bundle, use `npm run build` or `yarn build`.
+      -->
+      <script src="https://kit.fontawesome.com/e141623122.js" crossorigin="anonymous"></script>
   </body>
 </html>
